@@ -223,6 +223,24 @@
 #  define CONFIG_NXWM_TASKBAR_TOP 1
 #endif
 
+// Taskbar ICON scaling
+
+#ifdef CONFIG_NXWM_TASKBAR_ICONSCALE
+#  ifndef CONFIG_NXWM_TASKBAR_ICONWIDTH
+#    error Scaling requires CONFIG_NXWM_TASKBAR_ICONWIDTH
+#    define CONFIG_NXWM_TASKBAR_ICONWIDTH  50
+#  endif
+#  ifndef CONFIG_NXWM_TASKBAR_ICONHEIGHT
+#    error Scaling requires CONFIG_NXWM_TASKBAR_ICONHEIGHT
+#    define CONFIG_NXWM_TASKBAR_ICONHEIGHT 42
+#  endif
+#else
+#  undef CONFIG_NXWM_TASKBAR_ICONWIDTH
+#  define CONFIG_NXWM_TASKBAR_ICONWIDTH  25 // Used below
+#  undef CONFIG_NXWM_TASKBAR_ICONHEIGHT
+#  define CONFIG_NXWM_TASKBAR_ICONHEIGHT 21 // Used below (NOT)
+#endif
+
 /**
  * At present, all icons are 25 pixels in "width" and, hence require a
  * task bar of at least that size.
@@ -230,9 +248,11 @@
 
 #ifndef CONFIG_NXWM_TASKBAR_WIDTH
 #  if defined(CONFIG_NXWM_TASKBAR_TOP) || defined(CONFIG_NXWM_TASKBAR_BOTTOM)
-#    define CONFIG_NXWM_TASKBAR_WIDTH (25+2*CONFIG_NXWM_TASKBAR_HSPACING)
+#    define CONFIG_NXWM_TASKBAR_WIDTH \
+       (CONFIG_NXWM_TASKBAR_ICONWIDTH+2*CONFIG_NXWM_TASKBAR_HSPACING)
 #  else
-#    define CONFIG_NXWM_TASKBAR_WIDTH (25+2*CONFIG_NXWM_TASKBAR_VSPACING)
+#    define CONFIG_NXWM_TASKBAR_WIDTH \
+       (CONFIG_NXWM_TASKBAR_ICONWIDTH+2*CONFIG_NXWM_TASKBAR_VSPACING)
 #  endif
 #endif
 
